--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       #veracode test action
       #------------
       - name: Bundle Artifacts for SAST Scan
-        run: zip -r my-service.zip veracode-test
+        run: zip -r my-service.zip .
 
       - name: Veracode Upload And Scan
         # You may pin to the exact commit or the version.
