--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Veracode Upload And Scan
         # You may pin to the exact commit or the version.
         # uses: veracode/veracode-uploadandscan-action@c5e63c8383debb26a0d48250eab75d94327635ba
-        uses: veracode/veracode-uploadandscan-action@0.2.1
+        uses: veracode/veracode-uploadandscan-action@master
         with:
           # appname
           appname: ${{ github.repository }}
@@ -61,7 +61,25 @@ jobs:
           createsandbox: true
           sandboxname: develop-${{ github.run_id }}
           scantimeout: 30
-          #Remove bundle after
+          
+        #Remove bundle after scan
       - name: Remove scanned Artifact
         run: rm my-service.zip
+        
+        #Remove sandbox after scan
+      - name: Remove Veracode Sandbox
+        uses: ./.github/actions/veracode-sandbox-cleaner
+        with:
+          # ID of the application in the Veracode, can be retrieved from the URL
+          # e.g. for URL https://analysiscenter.veracode.com/auth/index.jsp#HomeAppProfile:424242:123456
+          # the ID is the 2nd block of digits, in particular - 123456
+          veracode-app-id: 1274516
+
+          # global secrets
+          veracode-api-id: ${{ secrets.VERACODE_API_ID }}
+          veracode-api-secret: ${{ secrets.VERACODE_API_SECRET }}
+
+          # name of the sandbox used on the 'scan' step
+          sandbox-name: develop-${{ github.run_id }}
+
 
