--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,15 @@
 name: CI
 
 # Controls when the workflow will run
-on:
+#on:
   # Triggers the workflow on push or pull request events but only for the master branc
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+on:
+  schedule:
+  - cron: "25 14 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
