--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ name: CI
 #  pull_request:
 #    branches: [ master ]
 on:
+  pull_request:
+  push:
+    branches:
+      - master
   schedule:
   - cron: "25 14 * * *"
 
@@ -49,8 +53,8 @@ jobs:
           # vkey
           vkey: ${{ secrets.VERACODE_API_SECRET }}
           # true or flase
-          createsandbox: true
-          sandboxname: develop-${{ github.run_id }}
+          #createsandbox: true
+          #sandboxname: develop-${{ github.run_id }}
           scantimeout: 60
           criticality: VeryHigh
           
