--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,18 +9,46 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: circleci/openjdk:11.0.2-jdk
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run:
-          name: "Veracode Scan Status"
-          command: -sh  ./veracode-scan.sh $VERACODE_API_ID $VERACODE_API_SECRET "Verademo" "/home/circleci/repo/target/Verademo.war" build_name_number
+      - run: 
+            name: "Bundle artifact for upload to Veracode"
+            command: zip -r upload.zip src public package-lock.json package.json
+
+        - run:
+            name: "Get the Veracode agent"
+            command: |
+                wget https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/19.2.5.6/vosp-api-wrappers-java-19.2.5.6.jar -O VeracodeJavaAPI.jar
+                chmod 755 VeracodeJavaAPI.jar
+        - run:
+            name: "Upload to Veracode"
+            command: java -jar VeracodeJavaAPI.jar 
+                -vid $VERACODE_API_ID 
+                -vkey $VERACODE_API_SECRET
+                -action uploadandscan
+                -scantimeout 60
+                -appname "integromat/veracode-test"
+                -createprofile false 
+                -version CircleCI-$CIRCLE_BUILD_NUM
+                -filepath upload.zip
+        
+        - run: 
+            name: "Delete scanned artifact"
+            command: rm -r upload.zip
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+  nightly:
+        triggers:
+        - schedule:
+            cron: "50 13 * * *"
+            filters:
+                branches:
+                    only:
+                        - vera
+        jobs:
+        - say-hello
